# docs/swagger.json
@@ -121,6 +121,35 @@
                 }
             }
         },
+        "/find-similar-task": {
+            "get": {
+                "description": "Return user a list of similar tasks",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Return user a list of similar tasks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.SimilarTaskList"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/todo": {
             "get": {
                 "description": "get List of ToDo items",
@@ -134,6 +163,22 @@
                     "Crud"
                 ],
                 "summary": "Get List of ToDo items",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "result page number",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "result page size",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -246,6 +291,57 @@
                     }
                 }
             },
+            "put": {
+                "description": "updates a ToDo item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Crud"
+                ],
+                "summary": "Updates a ToDo item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ToDO task ID",
+                        "name": "todoId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Creates a Task",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/datastore.ToDo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/datastore.ToDo"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.HTTPError"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "delete a ToDo item",
                 "consumes": [
@@ -317,6 +413,20 @@
                 "message": {
                     "type": "string",
                     "example": "status bad request"
+                }
+            }
+        },
+        "api.SimilarTaskList": {
+            "type": "object",
+            "properties": {
+                "similarTask": {
+                    "type": "array",
+                    "items": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/datastore.ToDo"
+                        }
+                    }
                 }
             }
         },
